chore: production readiness and cleanup